# psmoveapi

./: .appveyor.yml  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  Doxyfile  INSTALL  LAYOUT  README  README.md  README.mingw64  README.osx  README.ubuntu  README.win32  README.win32_mingw64  README.win64  README.win64_mingw64  README.win64_msvc  README.win64_msvc2013  WINDOWS_EXTRA  appveyor.yml  build_msvc_2013.bat  build_msvc_2015.bat  build_msvc_common.bat  copyjava.cmake  makefile  moved.c  moved.h  moved_client.c  moved_client.h  moved_client_test.c  moved_protocol.h  ps3eye_settings.reg  psmove-example.c  psmove.c  psmove.h  psmove.i  (+13 more)
bindings/: CMakeLists.txt  copy_java.bat  psmove.i
bindings/glib/: PsMoveApi.c  PsMoveApi.py  README  clean.sh  env.sh
bindings/opentracker/: PSMoveModule.cxx  PSMoveModule.h  PSMoveSource.cpp  PSMoveSource.cxx  PSMoveSource.h  README  opentracker_vrue2011.patch  psmove_test.xml
bindings/python/: psmoveapi.py
bindings/qt/: CMakeLists.txt  psmoveqt.cpp  psmoveqt.hpp
bindings/swig/: psmove.i
bindings/unity/: COPYING  README
bindings/unity/pairing/: PairingUtility.cs  README.txt
bindings/unity/src/: MoveController.cs  UniMoveController.cs  UniMoveTest.cs
examples/: CMakeLists.txt  red_green.py
examples/c/: battery_check.c  distance_calibration.c  distance_calibration.cpp  dump_calibration.c  example.c  example_new_api.cpp  moved.c  moved.h  moved_client_test.c  multiple.c  psmove_examples_opengl.h  psmovepair.c  test_calibration.c  test_camera.cpp  test_capture_performance.c  test_end2end_latency.c  test_extension.c  test_led_pwm_frequency.c  test_led_update.c  test_navcon.cpp  test_opengl.cpp  test_opengl2.cpp  test_opengl3.cpp  test_read_performance.c  test_record_video.c  test_responsiveness.c  test_roi_size.c  test_tracker.c  test_tracker.cpp  tracker_camera_calibration.c  tracker_camera_calibration.cpp  tuio_server.cpp
examples/csharp/: LEDs.cs  README  SensorReading.cs  Tracker.cs  makefile
examples/java/: Fusion.java  README  SensorReading.java  Tracker.java  build.xml
examples/labs/: .gitignore
examples/labs/accelerometer3d/: README  accelerometer3d.pro  main.cpp  orientation.h  view.cpp  view.h
examples/labs/movetytouch/: debugoutput.h  demoview.cpp  demoview.h  eventmapper.cpp  eventmapper.h  main.cpp  movetytouch.h  movetytouch.pro
examples/labs/orientation/: README  main.cpp  orientation.h  orientation.pro  orientationview.cpp  orientationview.h
examples/labs/paint/: main.cpp  orientation.h  paint.pro  paintview.cpp  paintview.h
examples/labs/playbackspeed/: README  playbackspeed.cpp  playbackspeed.pro
examples/labs/sensorfilter/: OneEuroFilter.cc  main.cpp  movegraph.cpp  movegraph.h  sensorfilter.pro
examples/labs/testgui/: psmovetestgui.ui  testgui.pro
examples/labs/whiteboard/: README  main.cpp  mainwindow.cpp  mainwindow.h  mapping.h  whiteboard.pro
examples/labs/x11mouse/: README  makefile  xdo_osx.h  (+2 more)
examples/python/: always.py  batterycheck.py  beat.py  color_fade_multiple.py  cops.py  cops_multiple.py  ep_cubes.py  ep_distance.py  ep_game.py  ep_mirror.py  ep_multiple.py  ep_whack.py  example_new_api.py  gyro.py  gyro_separate.py  magnetometer_proximity.py  magnetometer_proximity_ngj.py  masspair.py  mk-index.py  multiple.py  new_api_events.py  nose_tests_runner.py  pair.py  psmove_test.py  red_green.py  red_green_multiple.py  rolling.py  test_calibration.py  test_distance.py  test_exposure.py  test_fusion.py  test_fusion_pygame.py  test_tracker.py  tracker_image_pygame.py
examples/qt/: SOURCES  example.cpp  example.qml  multiple.cpp  trailers.cpp  trailers.qrc
qt/: CMakeLists.txt  README  example.cpp  example.qml  multiple.cpp  multiple.qml  multiple.qrc  psmove.cpp  psmove.hpp  psmoveqt.cpp  psmoveqt.hpp  trailers.cpp  trailers.qml
src/: CMakeLists.txt  psmove.c  psmove_calibration.c  psmove_calibration.h  psmove_format.h  psmove_orientation.c  psmove_orientation.cpp  psmove_orientation.h  psmove_port.h  psmove_private.h  psmove_sockets.h  psmove_tracker.c  psmove_vector_math.c  psmove_vector_math.h  psmoveapi.cpp
src/daemon/: moved.cpp  moved_client.c  moved_client.cpp  moved_client.h  moved_monitor.c  moved_monitor.h  moved_monitor_linux.c  moved_monitor_osx.mm  moved_monitor_osx_hidapi.mm  psmove_moved_protocol.h
src/devtools/: CMakeLists.txt
src/math/: psmove_alignment.cpp  psmove_alignment.hpp  psmove_glm_math.hpp  psmove_math.c  psmove_math.h  psmove_quaternion.cpp  psmove_quaternion.hpp  psmove_vector.c  psmove_vector.h
src/platform/: psmove_linuxsupport.c  psmove_linuxsupport.h  psmove_osxsupport.h  psmove_osxsupport.m  psmove_port_linux.c  psmove_port_linux.cpp  psmove_port_osx.c  psmove_port_osx.m  psmove_port_osx.mm  psmove_port_windows.c  psmove_winsupport.c  psmove_winsupport.h
src/tracker/: CMakeLists.txt  camera_control.c  camera_control.cpp  camera_control.h  camera_control_driver.cpp  camera_control_driver.h  camera_control_driver_avfoundation.mm  camera_control_driver_ps3eyedriver.cpp  camera_control_driver_v4l2.cpp  camera_control_layouts.cpp  camera_control_layouts.h  camera_control_linux.c  camera_control_macosx.c  camera_control_priv.h  camera_control_private.h  camera_control_win32.c  psmove_fusion.cpp  psmove_tracker.c  psmove_tracker.cpp  psmove_tracker_hue_calibration.cpp  psmove_tracker_hue_calibration.h  psmove_tracker_private.h  tracked_color.c  tracked_color.h  tracked_controller.c  tracked_controller.h  tracker_helpers.c  tracker_helpers.cpp  tracker_helpers.h  tracker_trace.c  tracker_trace.h
src/utils/: CMakeLists.txt  battery_check.c  battery_check.cpp  distance_calibration.cpp  libusb.cmake  magnetometer_calibration.c  moved.c  moved.cpp  moved.h  ps4_camera_firmware.cpp  psmove_auth_response.c  psmove_dfu_mode.c  psmove_get_firmware_info.c  psmove_get_firmware_info.cpp  psmove_get_firmware_version.c  psmovecli.cpp  psmovepair.c  psmoveregister.c  psmoveremotepair.cpp  sixpair.c  test_camera.cpp  test_extension.c  test_responsiveness.c  test_tracker.cpp  tracker_camera_calibration.cpp
(+236 files in other folders)
